--- a/app/post.html
+++ b/app/post.html
@@ -27,7 +27,27 @@
     </div>
     <main class="mdl-layout__content">
       <div class="page-content">
-       </div>
+         <div class="mdl-grid mdl-cell mdl-cell mdl-cell--12-col-desktop mdl-cell--9-col-tablet mdl-cell--4-col-phone mdl-card mdl-shadow--4dp">
+          <div class="mdl-card__media mdl-cell  mdl-cell--3-col-desktop mdl-cell--hide-tablet mdl-cell--4-col-phone">
+            <img class="card_image" src="https://cdn.pixabay.com/photo/2017/04/09/09/56/avenue-2215317__340.jpg" alt="">
+          </div>
+          <div class="mdl-cell mdl-cell--8-col">
+            <h2 class="mdl-card__title-text">Features</h2>
+            <div class="mdl-card__menu">
+              <button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
+                <i class="material-icons">share</i></button>
+            </div>
+            <div class="mdl-card__supporting-text no-left-padding">
+              <p>Excepteur reprehenderit sint exercitation ipsum consequat qui sit id velit elit. Velit anim eiusmod labore sit amet. Voluptate voluptate irure occaecat deserunt incididunt esse in. Qui ullamco consectetur aute fugiat officia ullamco proident Lorem ad irure.</p>
+              <span>Category: <a href="#">Latest</a></span>
+            </div>
+            <div style="text-align: right;" class="mdl-card__actions mdl-card--border">
+              <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+                Read more</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
   </div>
   <link rel="stylesheet" href="css/main.min.css">
