--- a/app/index.html
+++ b/app/index.html
@@ -104,6 +104,7 @@
   </div>
   <link rel="stylesheet" href="css/main.min.css">
   <script src="js/scripts.min.js"></script>
+  <script src="js/common.js"></script>
 </body>
 
 </html>
