add_landing change main page

--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer
             mdl-layout--fixed-header">
-    <header class="mdl-layout__header">
+    <header class="mdl-layout__header mdl-color--red-600">
       <div class="mdl-layout__header-row">
         <div class="mdl-layout-spacer"></div>
         <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable
@@ -41,11 +41,10 @@
     </div>
     <main class="mdl-layout__content">
       <div class="page-content">
-        <!-- First card -->
       </div>
       <div class="mdl-layout-spacer"></div>
       <!-- MDL Mini Footer Container-->
-      <footer class="mdl-mini-footer">
+      <footer class="mdl-mini-footer mdl-color--grey-900">
         <!-- MDL Footer left Section-->
         <div class="mdl-mini-footer__left-section">
           <div class="mdl-logo">News Portal</div>
