start post page

--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
       </nav>
     </div>
     <main class="mdl-layout__content">
-      <div class="page-content">
+      <div id="content" class="page-content">
       </div>
       <div class="mdl-layout-spacer"></div>
       <!-- MDL Mini Footer Container-->
