--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
       </div>
     </header>
     <div class="mdl-layout__drawer">
-      <span class="mdl-layout-title">New Portal</span>
+      <span class="mdl-layout-title">AFN</span>
       <nav class="mdl-navigation">
         <a class="mdl-navigation__link" href="">Link</a>
         <a class="mdl-navigation__link" href="">Link</a>
