add transitin on the new page

--- a/app/post.html
+++ b/app/post.html
@@ -13,70 +13,9 @@
 <body>
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer
             mdl-layout--fixed-header">
-    <header class="mdl-layout__header mdl-color--red-600">
-      <div class="mdl-layout__header-row">
-        <div class="mdl-layout-spacer"></div>
-        <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable
-                  mdl-textfield--floating-label mdl-textfield--align-right">
-          <label class="mdl-button mdl-js-button mdl-button--icon" for="fixed-header-drawer-exp">
-            <i class="material-icons">search</i>
-          </label>
-          <div class="mdl-textfield__expandable-holder">
-            <input class="mdl-textfield__input" type="text" name="sample" id="fixed-header-drawer-exp">
-          </div>
-        </div>
-      </div>
-    </header>
-    <div class="mdl-layout__drawer">
-      <span class="mdl-layout-title">New Portal</span>
-      <nav class="mdl-navigation">
-        <a class="mdl-navigation__link" href="">Link</a>
-        <a class="mdl-navigation__link" href="">Link</a>
-        <a class="mdl-navigation__link" href="">Link</a>
-        <a class="mdl-navigation__link" href="">Link</a>
-        <a class="mdl-navigation__link" href="">Link</a>
-        <a class="mdl-navigation__link" href="">Link</a>
-        <a class="mdl-navigation__link" href="">Link</a>
-      </nav>
-    </div>
     <main class="mdl-layout__content">
-      <div class="page-content">
-        <div class="article_header">
-          <h1>Lorem Ipsum Has Been The Industry When An Unknown Printer Took a Galley of Type?</h1>
-        </div>
-        <div class="article__content">
-          <div class="article_image__wrapper">
-            <img class="article_image" src="http://mignews.com.ua/modules/news/images/articles/photo/changing/15180583-potryasayuschie-3dpejzazhi-fotografa-po.jpg" alt="">
-          </div>
-          <div class="article_text">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam ratione numquam culpa eveniet saepe officia velit perspiciatis! Aut, voluptas nam molestias fugiat, doloremque, numquam quidem totam tenetur est consequatur magnam. ipsum dolor sit amet, consectetur adipisicing elit. Ex natus amet quo deserunt quibusdam consectetur, tenetur velit a, quisquam nobis qui cumque. Reprehenderit, ipsam nobis sapiente minima nesciunt accusantium, qui. ipsum dolor sit amet, consectetur adipisicing elit.</p>
-            <h5>It was popularised in the 1960s with the</h5>
-            <p>Repudiandae quasi nemo amet in quam laudantium quas temporibus repellendus, molestiae totam libero labore sunt. Ducimus rem voluptate debitis eveniet similique unde. ipsum dolor sit amet, consectetur adipisicing elit. Suscipit sapiente eum incidunt rerum, animi dignissimos saepe, dolore nulla repellat, magni cumque placeat, assumenda voluptatibus. Eos ad alias sint perferendis nihil. ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae quidem delectus reprehenderit soluta consequatur suscipit, necessitatibus perspiciatis, minima error, quam voluptate, ducimus dolore commodi nostrum a sint optio debitis laboriosam. ipsum dolor sit amet, consectetur adipisicing elit. Omnis ducimus unde ipsam dolorem? </p>
-            <h6>It was popularised in the 1960s with the</h6>
-            <p>Quidem excepturi repellat et, ab recusandae veritatis vel qui vero ipsa, dolore itaque illum in tempora quibusdam laboriosam, sunt porro? Quaerat accusamus nulla adipisci vero labore sint molestias fugit sed at autem dicta corrupti expedita quam, veritatis repudiandae laudantium doloremque sit eaque doloribus. Saepe cum, dolore aliquid in aliquam cupiditate delectus aperiam quisquam optio magni expedita totam id non. Cum cupiditate, eius eum. Pariatur, praesentium. Magni veritatis porro sit quibusdam earum culpa repudiandae! Magnam veritatis quam, explicabo ullam debitis quia illo saepe quos, laudantium earum mollitia beatae!</p>
-          </div>
-          <div class="article_tags">
-            <span>Category: <a href="#">Latest</a> * <a href="#">Latest</a> * <a href="#">Latest</a></span>
-          </div>
-          <div class="article_like">
-          </div>
-        </div>
+      <div id="full-post" class="page-content">
       </div>
-      <footer class="mdl-mini-footer mdl-color--grey-900">
-        <!-- MDL Footer left Section-->
-        <div class="mdl-mini-footer__left-section">
-          <div class="mdl-logo">News Portal</div>
-          <!-- MDL Footer link-list -->
-          <ul class="mdl-mini-footer__link-list">
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-          </ul>
-        </div>
-      </footer>
     </main>
   </div>
   <link rel="stylesheet" href="css/main.min.css">
