--- a/app/index.html
+++ b/app/index.html
@@ -13,14 +13,24 @@
 <body>
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer
             mdl-layout--fixed-header">
+    <header class="mdl-layout__header mdl-color--red-600"></header>
+    <div class="mdl-layout__drawer"></div>
     <main class="mdl-layout__content">
       <div id="content" class="page-content">
       </div>
       <div class="mdl-layout-spacer"></div>
+      <footer class="mdl-mini-footer mdl-color--grey-900"></footer>
     </main>
   </div>
   <link rel="stylesheet" href="css/main.min.css">
   <script src="js/scripts.min.js"></script>
+  <script>
+  $(document).ready(function(e) {
+    $(".mdl-layout__header").load("header.html");
+    $(".mdl-layout__drawer").load("drawer.html");
+    $(".mdl-mini-footer").load("footer.html");
+  });
+  </script>
 </body>
 
 </html>
