first step for new life

--- a/app/drawer.html
+++ b/app/drawer.html
@@ -1,6 +1,6 @@
 <span class="mdl-layout-title">AFN</span>
 <nav class="mdl-navigation">
-  <a class="mdl-navigation__link" href="">Link</a>
+  <a id="science" class="mdl-navigation__link" href="">Link</a>
   <a class="mdl-navigation__link" href="">Link</a>
   <a class="mdl-navigation__link" href="">Link</a>
   <a class="mdl-navigation__link" href="">Link</a>
