NP-3 Add Groups
news groups were added

--- a/app/drawer.html
+++ b/app/drawer.html
@@ -1,6 +1,9 @@
 <span class="mdl-layout-title">AFN</span>
 <nav class="mdl-navigation">
-  <a id="science" class="mdl-navigation__link" href="">Link</a>
+  <button id="science" >Science</button>
+  <button id="business" >Business</button>
+  <button id="health" >Health</button>
+  <a  class="mdl-navigation__link" href="">Science</a>
   <a class="mdl-navigation__link" href="">Link</a>
   <a class="mdl-navigation__link" href="">Link</a>
   <a class="mdl-navigation__link" href="">Link</a>
