--- a/app/drawer.html
+++ b/app/drawer.html
@@ -1,13 +1,8 @@
 <span class="mdl-layout-title">AFN</span>
 <nav class="mdl-navigation">
-  <button id="science" >Science</button>
-  <button id="business" >Business</button>
-  <button id="health" >Health</button>
-  <a  class="mdl-navigation__link" href="">Science</a>
-  <a class="mdl-navigation__link" href="">Link</a>
-  <a class="mdl-navigation__link" href="">Link</a>
-  <a class="mdl-navigation__link" href="">Link</a>
-  <a class="mdl-navigation__link" href="">Link</a>
-  <a class="mdl-navigation__link" href="">Link</a>
-  <a class="mdl-navigation__link" href="">Link</a>
+  <a class="active mdl-navigation__link" href="index.html">Home</a>
+  <a id="science" class="mdl-navigation__link">Science</a>
+  <a id="business" class="mdl-navigation__link">Business</a>
+  <a id="health" class="mdl-navigation__link">Health</a>
+  <a id="chill" class="mdl-navigation__link">Chill</a>
 </nav>
