--- a/app/header.html
+++ b/app/header.html
@@ -5,7 +5,7 @@
       <i class="material-icons">search</i>
     </label>
     <div class="mdl-textfield__expandable-holder">
-      <input class="mdl-textfield__input" type="text" name="sample" id="fixed-header-drawer-exp">
+      <input class="search mdl-textfield__input" type="text" name="sample" id="fixed-header-drawer-exp">
     </div>
   </div>
 </div>
