add some changes

--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,13 @@
       <footer class="mdl-mini-footer mdl-color--grey-900"></footer>
     </main>
   </div>
+
+  <div class="modal">
+    <form>
+      
+    </form>
+  </div>
+
   <link rel="stylesheet" href="css/main.min.css">
   <script src="js/scripts.min.js"></script>
   <script>
