--- a/app/header.html
+++ b/app/header.html
@@ -1,4 +1,7 @@
 <div class="mdl-layout__header-row">
+	<a href="/" id="back">
+    <i class="material-icons">keyboard_backspace</i>
+  </a>
   <div class="mdl-layout-spacer"></div>
   <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable mdl-textfield--floating-label mdl-textfield--align-right">
     <label class="mdl-button mdl-js-button mdl-button--icon" for="fixed-header-drawer-exp">
