--- a/app/drawer.html
+++ b/app/drawer.html
@@ -1,8 +1,8 @@
 <span class="mdl-layout-title">AFN</span>
-<nav id="menu" class="mdl-navigation">
-	<li id="all">
-		<a id='all_link' class="mdl-navigation__link" href="/">All news</a>
-	</li>
+<nav class="mdl-navigation" id="menu">
+  <li id="all">
+    <a class="mdl-navigation__link" href="/" id='all_link'>All news</a>
+  </li>
 </nav>
 
 <script src="js/scripts.min.js"></script>
