--- a/app/header.html
+++ b/app/header.html
@@ -1,14 +1,16 @@
 <div class="mdl-layout__header-row">
-	<a href="/" id="back">
+  <a href="/" id="back">
     <i class="material-icons">keyboard_backspace</i>
   </a>
   <div class="mdl-layout-spacer"></div>
-  <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable mdl-textfield--floating-label mdl-textfield--align-right">
+  <div
+      class="mdl-textfield mdl-js-textfield mdl-textfield--expandable mdl-textfield--floating-label mdl-textfield--align-right">
     <label class="mdl-button mdl-js-button mdl-button--icon" for="fixed-header-drawer-exp">
       <i class="material-icons">search</i>
     </label>
     <div class="mdl-textfield__expandable-holder">
-      <input class="search mdl-textfield__input" type="text" name="sample" id="fixed-header-drawer-exp">
+      <input class="search mdl-textfield__input" id="fixed-header-drawer-exp" name="sample"
+             type="text">
     </div>
   </div>
 </div>
