--- a/app/index.html
+++ b/app/index.html
@@ -41,16 +41,16 @@
               onclick="getPayPage();" style="text-align: center;" type="button">
         Pay
       </button>
-      <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent close"
-              style="text-align: center;"
-              onclick="closeModal('signUpModal')";
+      <button ;
+              class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent close"
+              onclick="closeModal('signUpModal')" style="text-align: center;"
               type="button">
         <i class="material-icons">close</i>Close
       </button>
       <div>
         <p>If you have account</p>
-        <button class="mdl-button" 
-                onclick="getLoginPage();" 
+        <button class="mdl-button"
+                onclick="getLoginPage();"
                 style="text-align: center;"
                 type="button">sign in
         </button>
@@ -77,14 +77,14 @@
               style="text-align: center;" type="submit">Sign in
       </button>
       <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent close"
+              onclick="closeModal('signInModal');"
               style="text-align: center;"
-              type="button"
-              onclick="closeModal('signInModal');">
+              type="button">
         <i class="material-icons">close</i>Close
       </button>
       <div>
         <p>If you don't have account</p>
-        <button class="mdl-button" 
+        <button class="mdl-button"
                 onclick="getSignUpPage();"
                 style="text-align: center;"
                 type="button">sign up
@@ -106,8 +106,8 @@
       <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored"
               style="text-align: center;" type="submit">Pay
       </button>
-      <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent"
-              onclick="closeModal('payModal')";
+      <button ;
+              class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent" onclick="closeModal('payModal')"
               style="text-align: center;"
               type="button">
         <i class="material-icons">close</i>Close
